# sitree

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  PLAN.md  WORKFLOW.md
backend/: .gitignore  pyproject.toml
backend/src/sitree/: __init__.py  cli.py  pipeline.py  report.py  schema.py  server.py
backend/src/sitree/core/: auth.py  classifier.py  crawler.py  diff.py  discovery.py  graph.py  stats.py  url_normalize.py
backend/src/sitree/live/: bridge.py  cdp_bridge.py  hub.py  playwright_bridge.py  runner.py  session.py
backend/src/sitree/prompts/: page_classify.md
backend/tests/: conftest.py  test_auth.py  test_classifier.py  test_cli.py  test_crawler.py  test_diff.py  test_discovery.py  test_graph.py  test_live.py  test_pipeline.py  test_report.py  test_schema.py  test_server.py  test_stats.py  test_url_normalize.py
docs/: README.md  auth-strategies.md  crawl4ai-internals.md  crawling-basics.md  js-rendering.md  live-exploration.md  politeness-and-robots.md  url-normalization.md
frontend/: package-lock.json  package.json  svelte.config.js  vitest.config.ts
frontend/src/lib/: example.json  types.ts
frontend/src/lib/graph/: cytoscape.test.ts  cytoscape.ts  live.test.ts  live.ts
frontend/src/routes/: +layout.ts  +page.svelte
frontend/src/routes/live/: +page.svelte
