[project]
name = "sitree"
version = "0.1.0"
description = "Visualize a website's link structure and semantic page roles as a tree/graph."
readme = "README.md"
authors = [
    { name = "ivoryRabbit", email = "tsi00008@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
    "playwright>=1.60.0",
    "selectolax>=0.4.9",
    "typer>=0.25.1",
    "uvicorn>=0.48.0",
    "websockets>=16.0",
]

[project.scripts]
sitree = "sitree:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
